kubernetes/apps/soju/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soju
  namespace: irc
spec:
  type: ClusterIP
  selector:
    app: soju
  ports:
    - port: 8081
      targetPort: 8081
      name: http
