kubernetes/apps/soju/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: soju
  namespace: irc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - irc.pavlenko.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: soju
          port: 8081
          weight: 1
